cluster/apps/messaging/ess-community/app/matrixrtc-cors-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ess-matrixrtc-cors
  namespace: messaging
spec:
  headers:
    accessControlAllowHeaders:
      - X-Requested-With
      - Content-Type
      - Authorization
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowOriginList:
      - "*"
