cluster/apps/messaging/ess-community/app/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ess-community
  annotations:
    external-dns.kubernetes.io/enabled: 'true'
    external-dns.kubernetes.io/target: ${INGRESS_DEFAULT}
    external-dns.kubernetes.io/cloudflare-proxied: 'false'
spec:
  parentRefs:
    - name: public
      namespace: networking
      sectionName: websecure-public
  hostnames:
    - matrix.${SECRET_PUBLIC_DOMAIN}
  rules:
    - matches:
        - path: {type: PathPrefix, value: /_matrix}
        - path: {type: PathPrefix, value: /_synapse}
      backendRefs:
        - name: ${APP}-synapse
          port: 8008
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: element-web
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Messaging
    gethomepage.dev/icon: element
    gethomepage.dev/name: Element
spec:
  parentRefs:
    - name: public
      namespace: networking
      sectionName: websecure-public
  hostnames: ['matrix.${SECRET_PUBLIC_DOMAIN}']
  rules:
    - backendRefs: [{name: '${APP}-element-web', port: 80}]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: element-admin
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Messaging
    gethomepage.dev/icon: element
    gethomepage.dev/name: Element Admin
spec:
  parentRefs:
    - name: public
      namespace: networking
      sectionName: websecure-public
  hostnames: ['admin.matrix.${SECRET_PUBLIC_DOMAIN}']
  rules:
    - backendRefs: [{name: '${APP}-element-admin', port: 8080}]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-authentication-service
spec:
  parentRefs:
    - name: public
      namespace: networking
      sectionName: websecure-public
  hostnames: ['account.matrix.${SECRET_PUBLIC_DOMAIN}']
  rules:
    - backendRefs: [{name: '${APP}-matrix-authentication-service', port: 8080}]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-rtc
spec:
  parentRefs:
    - name: public
      namespace: networking
      sectionName: websecure-public
  hostnames: ['mrtc.matrix.${SECRET_PUBLIC_DOMAIN}']
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef: {group: traefik.io, kind: Middleware, name: ess-matrixrtc-cors}
      backendRefs: [{name: '${APP}-matrix-rtc-authorisation-service', port: 8080}]
